Intégrer la pagination